# namelist-rs

./: Cargo.toml  LICENSE  README.md  room_fire.fds
.circleci/: config.yml
.github/workflows/: checks.yaml
src/: lib.rs  lst.rs  namelists.rs  tokenizer.rs
tests/: TestD.fds  TestE.fds  TestG.fds  integration.rs  test_input.txt
